# UTFPR

./: calculations.py  client.py  go.mod  misc.py  network_calc.go  server.go  server.py
Computer_Graphics/: .gitignore  Computer_Graphics.pro  genericobject.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  matrix.h  my_frame.cpp  my_frame.h  myframe.cpp  myframe.h  rectangle.cpp  rectangle.h  triangle.cpp  triangle.h  viewport.cpp  viewport.h  window.cpp  window.h
Computer_Organization/: vector0.asm
Computer_Organization/assigment_1/: macros.asm  main.asm  vector0.asm
Computer_Organization/assigment_2/: Makefile  main.py  test_hit.c  test_miss.c
Data_Structures/: P1_lab.txt  singly_linked_list.h
Data_Structures/Data_Structures1/Exams/: P1_lab.c  P1_lab.txt
Data_Structures/Data_Structures2/: CMakeLists.txt  blockchain.c  blockchain.h  main.c  query.c
Data_Structures/Data_Structures2/files/: blockchain.txt
Data_Structures/Data_Structures2/libs/: utils.c  utils.h
Data_Structures/Exams/: P1.c  P1_lab.c
Data_Structures/Project/: lab_project1.h  projeto.h
Data_Structures/Tests/: P1.c
Database/: main.sql
Mobile_Programming/: .gitignore  README.md  TODO  pubspec.yaml
Mobile_Programming/lib/: main.dart
Mobile_Programming/lib/controllers/: card_controller.dart  (+1 more)
SATI/: .gitignore  marathon_userfile_extractor.py
build-Computer_Graphics-Desktop_Qt_6_5_0_MinGW_64_bit-Debug/: Makefile  Makefile.Debug  Makefile.Release  ui_mainwindow.h
build-Computer_Graphics-Desktop_Qt_6_5_0_MinGW_64_bit-Debug/debug/: moc_mainwindow.cpp  moc_my_frame.cpp
(+12 files in other folders)
